--- a/src/main/resources/templates/user-update.html
+++ b/src/main/resources/templates/user-update.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <meta charset="UTF-8">
 <title>Create user</title>
+<head>
 </head>
 <body>
 
-<form  th:action="@{/admin/user-update}" th:object="${user}" th:method="PATCH">
-  <label for="id">ID</label>
-  <input readonly type="number" th:field="*{id}" id="id" placeholder="ID">
-  <br/>
-  <label for="firstName">First name</label>
-  <input type="text" th:field="*{firstName}" id="firstName" placeholder="First Name">
-  <br/>
-  <label for="lastName">Last name</label>
-  <input type="text" th:field="*{lastName}" id="lastName" placeholder="Last Name">
-  <br/>
-  <label for="email">Email</label>
-  <input type="text" th:field="*{email}" id="email" placeholder="Email">
-  <input type="submit" value="Update User">
+<form metod="get" action="/logout" >
+    <button  tupe="submit"> Logout</button>
 </form>
-<div>
-  <div class="float" sec:authorize="isAuthenticated()">
-    <form  th:action="@{/logout}" method="post">
-      <input type="submit" value="Logout">
-    </form>
-  </div>
-</div>
+<br>
+
+<form action="#" th:action="@{/my-update}" th:object="${user}" method="POST">
+    Id<input readonly type="number" th:field="*{id}" id="id" placeholder="ID"><br>
+
+
+    Name<input type="text" th:field="*{name}" id="name" placeholder="Enter please name" required/><br>
+    Surname<input type="text" th:field="*{surname}" id="surname" placeholder="Enter please surname" required/><br>
+    Age<input type="number" th:field="*{age}" id="age" placeholder="Enter please age" required/>
+
+    Email<input type="text" th:field="*{email}" id="email" placeholder="Enter please email" required/><br>
+    Password<input type="text" th:field="*{password}" id="password" placeholder="Enter please password" required/><br>
+
+<!--    <p>-->
+<!--        <label>-->
+<!--            <select size="3" multiple="multiple" name="rolesId" id="roles">-->
+<!--                <option disabled>Roles:</option>-->
+<!--                <option value="ROLE_ADMIN">ADMIN</option>-->
+<!--                <option selected value="ROLE_USER">USER</option>-->
+<!--            </select>-->
+<!--        </label>-->
+<!--    </p>-->
+
+
+    <p><input type="submit" value="Save">
+</form>
 </body>
 </html>
